<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="activity_initial_setup" translatable="false">tk.tanguy.activity.InitialSetup</string>
    <string name="activity_auth_keys_management" translatable="false">tk.tanguy.activity.AuthorizedKeysManagement</string>
    <string name="activity_file_chooser" translatable="false">com.h3r3t1c.filechooser.FileChooser</string>
    <string name="activity_about" translatable="false">tk.tanguy.activity.About</string>
    <string name="pref_dropbear_auth_password_key" translatable="false">auth_password</string>
    <string name="pref_dropbear_auth_username_key" translatable="false">auth_username</string>
    <string name="pref_dropbear_port_key" translatable="false">dropbear_port</string>
    <string name="pref_wifi_auto_enable_key" translatable="false">wifi_auto_enable</string>
    <string name="pref_wifi_lock_key" translatable="false">wifi_lock</string>
    <string name="pref_prevent_device_sleep_key" translatable="false">prevent_device_sleep</string>
    <string name="pref_path_to_su_key" translatable="false">path_to_su</string>
    <string name="pref_path_to_sh_key" translatable="false">path_to_sh</string>
    <string name="pref_interface_notification_key" translatable="false">notification</string>
    <string name="pref_dropbear_start_on_boot_only_if_was_running_key" translatable="false">only_if_was_running</string>
    <string name="pref_dropbear_start_on_boot_key" translatable="false">start_on_boot</string>
    <string name="pref_debug_key" translatable="false">debug</string>
    <string name="pref_dropbear_as_root_key" translatable="false">dropbear_runs_as_root</string>
    <string name="act_main_status">Status:</string>
    <string name="act_main_unknown"> </string>
    <string name="act_main_ip">IP address(es): </string>
    <string name="act_main_defip">0.0.0.0</string>
    <string name="act_main_username">Login:</string>
    <string name="act_main_port">Port: </string>
    <string name="act_main_start">Start</string>
    <string name="act_main_preferences">Preferences</string>
    <string name="act_pubkeylist_empty">empty</string>
    <string name="item_pubkey_keyexample">Key Example</string>
    <string name="item_pubkey_dsa1024">DSA 1024-bit</string>
    <string name="main_running">SSH daemon running</string>
    <string name="main_runningasroot">Daemon running as root</string>
    <string name="main_ipaddresses">IP address\(es\): </string>
    <string name="password_tooshort">Password too short</string>
    <string name="password_show">Show password</string>
    <string name="setup_warningfirsttime">It looks like DroidSSHd is running for the first time on this device. Default password is "password".\n\nProceed with initial setup?</string>
    <string name="setup_confirmyes">Yes, let\'s do this now!</string>
    <string name="setup_cancelno">No, quit DroidSSHd.</string>
    <string name="table_runningasroot">Running as root:</string>
    <string name="about_text">Initial version by mestre,\n\nAdapted for the Motorola Defy ICS ROMs\nby Tanguy Pruvot\n\nThis version uses CyanogenMod 7.1+ dropbear version, not included in apk.\n\nFull sources are available on github: tpruvot\'s fork\n\n</string>
    <string name="about_ok">Ok</string>
    <string name="pref_dropbear_auth_username_title">Username</string>
    <string name="pref_dropbear_auth_password_title">Password</string>
    <string name="pref_dropbear_auth_publickey">Public Key</string>
    <string name="pref_dropbear_auth_pkey_desc">Click here to select a file containing your SSH public key on the SD card</string>
    <string name="pref_category_sshd_title">Dropbear SSHd settings</string>
    <string name="pref_screen_server_settings_title">Service and Authentication</string>
    <string name="pref_screen_server_settings_summary">Service startup/shutdown, TCP port, permissions, authentication and key management.</string>
    <string name="pref_dropbear_port_title">TCP port to listen</string>
    <string name="pref_dropbear_port_summary">Currently set to listen on port</string>
    <string name="pref_wifi_auto_enable_summary">Turn on Wifi at daemon startup if it was disabled</string>
    <string name="pref_wifi_auto_enable_title">Auto-enable Wifi</string>
    <string name="pref_wifi_lock_summary">Keeps Wifi radio enabled when the SSH daemon is active</string>
    <string name="pref_wifi_lock_title">Wifi lock</string>
    <string name="pref_category_power_category_title">Power Management</string>
    <string name="pref_prevent_device_sleep_summary">Prevent device from sleeping (uses more battery power)</string>
    <string name="pref_prevent_device_sleep_title">Keep device awake</string>
    <string name="pref_system_pathtobinaries">Path to binaries</string>
    <string name="pref_path_to_su_summary">Path to superuser binary</string>
    <string name="pref_path_to_su_title">Path to SU</string>
    <string name="pref_path_to_su_default">/system/xbin/su</string>
    <string name="pref_path_to_sh_summary">Custom paths for binaries such as busybox and/or toolbox</string>
    <string name="pref_path_to_sh_title">Path to SH</string>
    <string name="pref_path_to_sh_default">/system/xbin/ash</string>
    <string name="pref_screen_system_settings_title">System settings</string>
    <string name="pref_screen_system_settings_summary">System tweaks, power management, path to binaries</string>
    <string name="pref_screen_ui_settings">UI Settings</string>
    <string name="pref_category_paths_title">Files and Directories</string>
    <string name="pref_interface_notification_summary">Show notification on status bar whenever the daemon is running</string>
    <string name="pref_interface_notification_label">Notification</string>
    <string name="pref_category_interface_title">User Interface</string>
    <string name="pref_category_development_title">Development tools</string>
    <string name="pref_dropbear_start_on_boot_only_if_was_running_title">Only if active at shutdown</string>
    <string name="pref_dropbear_start_on_boot_only_if_was_running_summary">SSH daemon will be started automatically only if it was running when the OS was shutdown</string>
    <string name="pref_dropbear_start_on_boot_title">Start on boot</string>
    <string name="pref_dropbear_start_on_boot_summary">Launch SSH daemon when the device (re)boots</string>
    <string name="menu_quit_title">Quit</string>
    <string name="menu_about">About</string>
    <string name="pref_debug_title">Verbose debug messages</string>
    <string name="pref_debug_summary">Enable a LOT of messages on the logs</string>
    <string name="pref_system">System</string>
    <string name="pref_dropbear_as_root_title">Run daemon as root</string>
    <string name="pref_dropbear_as_root_summary_enabled">Daemon will be launched as ROOT</string>
    <string name="pref_dropbear_as_root_summary_disabled">Daemon will be launched as USER</string>
    <string name="pref_droidsshd_settings_title">Settings</string>
    <string name="app_description">Dropbear SSH Server and Management Tools</string>
    <string name="act_main_stopping">Stopping...</string>
    <string name="act_main_starting">Starting...</string>
    <string name="act_main_stop">Stop</string>
    <string name="act_main_running">Running</string>
    <string name="act_main_busy">please wait...</string>
    <string name="act_main_stopped">Stopped</string>

    <string name="app_label" translatable="false">DroidSSHd</string>
    <string name="app_webpage_url" translatable="false">http://github.com/tpruvot/android_external_droidsshd/</string>
    <string name="ssh_icon_downwloaded_url" translatable="false">http://iconfinder.net</string>
    <string name="ssh_icon_created_by" translatable="false">Tanguy Pruvot</string>
    <string name="ssh_icon_created_by_url" translatable="false">http://tanguy.tk/</string>
    <string name="app_based_on" translatable="false">rsyncdroid</string>
    <string name="app_based_on_webpage_url" translatable="false">http://code.google.com/p/droidsshd/</string>
    <string name="pref_dropbear_auth_username_default" translatable="false">shell</string>
    <string name="pref_dropbear_auth_password_default" translatable="false">password</string>
    <string name="pref_debug_default" translatable="false">true</string>
    <string name="pref_interface_notification_default" translatable="false">true</string>
    <string name="pref_dropbear_start_on_boot_default" translatable="false">false</string>
    <string name="pref_dropbear_start_on_boot_only_if_was_running_default" translatable="false">true</string>
    <string name="pref_dropbear_as_root_default" translatable="false">false</string>
    <string name="pref_dropbear_port_default" translatable="false">2222</string>
</resources>
