<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/pref_droidsshd_settings_title" android:key="droidsshd_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_sshd_title">
        <PreferenceScreen android:title="@string/pref_screen_server_settings_title" android:summary="@string/pref_screen_server_settings_summary">
            <PreferenceCategory android:title="Authentication">
                <EditTextPreference android:password="true" android:singleLine="true" android:title="@string/pref_dropbear_auth_password_title" android:key="@string/pref_dropbear_auth_password_key" android:defaultValue="@string/pref_dropbear_auth_password_default" />
                <Preference android:title="Public Key" android:key="authorized_keys_key" android:summary="Click here to select a file containing your SSH public key on the SD card" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_category_sshd_title">
                <br.com.bott.droidsshd.tools.NumberPickerPreference android:title="@string/pref_dropbear_port_title" android:key="@string/pref_dropbear_port_key" android:defaultValue="@string/pref_dropbear_port_default" />
                <CheckBoxPreference android:title="@string/pref_dropbear_start_on_boot_title" android:key="@string/pref_dropbear_start_on_boot_key" android:summary="@string/pref_dropbear_start_on_boot_summary" android:defaultValue="false" />
                <CheckBoxPreference android:title="@string/pref_dropbear_start_on_boot_only_if_was_running_title" android:key="@string/pref_dropbear_start_on_boot_only_if_was_running_key" android:summary="@string/pref_dropbear_start_on_boot_only_if_was_running_summary" android:dependency="@string/pref_dropbear_start_on_boot_key" android:defaultValue="@string/pref_dropbear_start_on_boot_only_if_was_running_default" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/pref_screen_system_settings_title" android:summary="@string/pref_screen_system_settings_summary">
            <PreferenceCategory android:title="@string/pref_category_power_category_title">
                <CheckBoxPreference android:title="@string/pref_prevent_device_sleep_title" android:key="@string/pref_prevent_device_sleep_key" android:summary="@string/pref_prevent_device_sleep_summary" android:defaultValue="false" />
                <CheckBoxPreference android:title="@string/pref_wifi_lock_title" android:key="@string/pref_wifi_lock_key" android:summary="@string/pref_wifi_lock_summary" android:defaultValue="false" />
            </PreferenceCategory>
            <PreferenceCategory android:title="System">
                <CheckBoxPreference android:title="@string/pref_dropbear_as_root_title" android:key="@string/pref_dropbear_as_root_key" android:defaultValue="false" android:summaryOn="@string/pref_dropbear_as_root_summary_enabled" android:summaryOff="@string/pref_dropbear_as_root_summary_disabled" />
            </PreferenceCategory>
            <PreferenceCategory android:title="Path to binaries">
                <EditTextPreference android:singleLine="true" android:title="@string/pref_path_to_su_title" android:key="@string/pref_path_to_su_key" android:summary="@string/pref_path_to_su_summary" android:dependency="@string/pref_dropbear_as_root_key" android:defaultValue="@string/pref_path_to_su_default" />
                <EditTextPreference android:singleLine="true" android:title="@string/pref_path_to_sh_title" android:key="@string/pref_path_to_sh_key" android:summary="@string/pref_path_to_sh_summary" android:defaultValue="@string/pref_path_to_sh_default" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_interface_title">
        <CheckBoxPreference android:title="@string/pref_interface_notification_label" android:key="@string/pref_interface_notification_key" android:summary="@string/pref_interface_notification_summary" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_development_title">
        <CheckBoxPreference android:title="@string/pref_debug_title" android:key="@string/pref_debug_key" android:summary="@string/pref_debug_summary" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
