<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent" android:layout_gravity="fill">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TableRow android:layout_height="8dip" android:layout_width="match_parent" android:id="@+id/TableRow0"></TableRow>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_gravity="fill">
                <TextView android:textSize="16.0sp" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/status_title" android:layout_height="wrap_content" android:text="@string/act_main_status" android:layout_weight="5.0" android:layout_width="120dip"/>
                <EditText android:enabled="true" android:textSize="16.0sp" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/status_content" android:focusable="false" android:clickable="false" android:layout_height="wrap_content" android:text="@string/act_main_unknown" android:singleLine="true" android:editable="false" android:layout_weight="2.0" android:layout_width="160dip"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:text="@string/act_main_ip" android:layout_weight="5.0" android:layout_width="120dip"/>
                <EditText android:enabled="true" android:textSize="16.0sp" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/status_ip_address" android:focusable="false" android:clickable="false" android:layout_height="wrap_content" android:text="@string/act_main_defip" android:singleLine="true" android:editable="false" android:layout_weight="2.0" android:layout_width="160dip"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:text="@string/act_main_username" android:layout_weight="5.0" android:layout_width="120dip"/>
                <EditText android:enabled="true" android:textSize="16.0sp" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/status_username" android:focusable="false" android:clickable="false" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="8" android:editable="false" android:layout_weight="2.0" android:layout_width="160dip"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_vertical">
                <TextView android:textSize="16.0sp" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:text="@string/act_main_port" android:layout_weight="5.0" android:layout_width="120dip"/>
                <EditText android:enabled="true" android:textSize="16.0sp" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/status_tcp_port" android:focusable="false" android:clickable="false" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="5" android:editable="false" android:layout_weight="2.0" android:layout_width="160dip"/>
            </LinearLayout>
            <TableRow android:id="@+id/tableRow1" android:layout_width="match_parent" android:layout_height="8dip"></TableRow>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:enabled="true" android:textSize="16.0sp" android:textStyle="bold" android:id="@id/status_button" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/act_main_start"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:enabled="true" android:textSize="16.0sp" android:id="@id/preferences_button" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/act_main_preferences" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
